Improved Exception Handling, documentation